fix item-fixed z-index

--- a/app/assets/stylesheets/_home.css.sass
+++ b/app/assets/stylesheets/_home.css.sass
@@ -226,7 +226,7 @@ body
     padding: 0
     &.item-fixed .item-main // sticked item
       position: fixed
-      z-index: 10
+      z-index: 4
       top: $headerHeight + $titleHeight
       box-shadow:  0 1px 0 rgba(black,.2), 0 4px 0 rgba(black,.05)
     &.item-absolute-bottom .item-main //end of stick transition state
